Sync all content

--- a/content/resources/mit5_111f14_lec11.md
+++ b/content/resources/mit5_111f14_lec11.md
@@ -17,7 +17,7 @@ parent_title: 'Lecture 11: Lewis Structures: Breakdown of the Octet Rule'
 parent_type: CourseSection
 parent_uid: bbd6f3cb-d22b-a979-f3c5-3baa993e82b8
 resourcetype: Document
-title: Lecture Notes 11
+title: 'Lecture 11: Lewis Structures: Breakdown of the Octet Rule'
 uid: f9902c1a-0fe3-7ae4-8985-7862deffa086
 video_files:
   archive_url: ''
