--- a/content/resources/mit5_111f14_lec12.md
+++ b/content/resources/mit5_111f14_lec12.md
@@ -17,7 +17,7 @@ parent_title: 'Lecture 12: The Shapes of Molecules: VSEPR Theory'
 parent_type: CourseSection
 parent_uid: 657cf625-0ea3-965b-7507-5d66ee3cb607
 resourcetype: Document
-title: Lecture Notes 12
+title: 'Lecture 12: The Shapes of Molecules: VSEPR Theory'
 uid: 223a7ba2-0d79-4cb1-e06b-8b02484d58e9
 video_files:
   archive_url: ''
