--- a/content/resources/mit5_111f14_lec13.md
+++ b/content/resources/mit5_111f14_lec13.md
@@ -17,7 +17,7 @@ parent_title: 'Lecture 13: Molecular Orbital Theory'
 parent_type: CourseSection
 parent_uid: 0e6db317-91e1-3ca8-0e85-5c92186dafb0
 resourcetype: Document
-title: Lecture Notes 13
+title: 'Lecture 13: Molecular Orbital Theory'
 uid: bceb8936-7a29-24ea-b97d-cb476cec369e
 video_files:
   archive_url: ''
