--- a/content/resources/mit5_111f14_lec14.md
+++ b/content/resources/mit5_111f14_lec14.md
@@ -17,7 +17,7 @@ parent_title: 'Lecture 14: Valence Bond Theory and Hybridization'
 parent_type: CourseSection
 parent_uid: bc4e02be-0613-a6fc-db1f-e751834b8e16
 resourcetype: Document
-title: Lecture Notes 14
+title: 'Lecture 14: Valence Bond Theory and Hybridization'
 uid: 41f9f96f-4038-a519-975a-3cc320ffb1ff
 video_files:
   archive_url: ''
