--- a/content/resources/mit5_111f14_lec3.md
+++ b/content/resources/mit5_111f14_lec3.md
@@ -17,7 +17,7 @@ parent_title: 'Unit I: The Atom'
 parent_type: CourseSection
 parent_uid: 36cc671a-c04c-270e-9cac-7a210efd6846
 resourcetype: Document
-title: 'Principles of Chemical Science: Lecture Notes 3'
+title: 'Lecture 3: Wave-Particle Duality of Light'
 uid: d95f1abe-c7d8-eecc-1614-5b9f2fd2761e
 video_files:
   archive_url: ''
