--- a/content/resources/mit5_111f14_lec4.md
+++ b/content/resources/mit5_111f14_lec4.md
@@ -17,7 +17,7 @@ parent_title: 'Unit I: The Atom'
 parent_type: CourseSection
 parent_uid: 36cc671a-c04c-270e-9cac-7a210efd6846
 resourcetype: Document
-title: 'Principles of Chemical Science: Lecture Notes 4'
+title: "Lecture 4: Wave-Particle Duality of Matter; Schr\xF6dinger Equation"
 uid: dcf6ace1-49ab-7a68-3390-398a889c740e
 video_files:
   archive_url: ''
