--- a/content/resources/mit5_111f14_lec6.md
+++ b/content/resources/mit5_111f14_lec6.md
@@ -17,7 +17,7 @@ parent_title: 'Unit I: The Atom'
 parent_type: CourseSection
 parent_uid: 36cc671a-c04c-270e-9cac-7a210efd6846
 resourcetype: Document
-title: 'Principles of Chemical Science: Lecture Notes 6'
+title: 'Lecture 6: Hydrogen Atom Wavefunctions (Orbitals)'
 uid: 5c828fce-769b-146e-5820-a7d6ed0abfc2
 video_files:
   archive_url: ''
