--- a/content/resources/mit5_111f14_lec9.md
+++ b/content/resources/mit5_111f14_lec9.md
@@ -17,7 +17,7 @@ parent_title: 'Lecture 9: Periodic Table; Ionic and Covalent Bonds'
 parent_type: CourseSection
 parent_uid: 1defa0f1-c01b-a42e-057e-92fc7b1dec88
 resourcetype: Document
-title: Lecture Notes 9
+title: 'Lecture 9: Periodic Table; Ionic and Covalent Bonds'
 uid: c7892dbb-387c-db86-bc27-d4dbef21a7cb
 video_files:
   archive_url: ''
