--- a/content/resources/mit5_111f14_lec1.md
+++ b/content/resources/mit5_111f14_lec1.md
@@ -17,7 +17,7 @@ parent_title: 'Lecture 1: The Importance of Chemical Principles'
 parent_type: CourseSection
 parent_uid: 2093fa03-8f0b-9e63-c680-49a3ed4867fd
 resourcetype: Document
-title: 'Principles of Chemical Science: Lecture Notes 1'
+title: 'Lecture 1: The Importance of Chemical Principles'
 uid: 805ae0a4-e8dc-0b0f-b4f2-c4bd0ae68ebb
 video_files:
   archive_url: ''
