--- a/content/resources/mit5_111f14_lec10.md
+++ b/content/resources/mit5_111f14_lec10.md
@@ -17,7 +17,7 @@ parent_title: 'Lecture 10: Introduction to Lewis Structures'
 parent_type: CourseSection
 parent_uid: 5f89679f-aa0f-ab38-a4ec-a4a166b9093f
 resourcetype: Document
-title: Lecture Notes 10
+title: 'Lecture 10: Introduction to Lewis Structures'
 uid: 3549685d-4507-73a0-66a7-16832634203f
 video_files:
   archive_url: ''
