--- a/content/resources/mit5_111f14_lec2.md
+++ b/content/resources/mit5_111f14_lec2.md
@@ -17,7 +17,7 @@ parent_title: 'Unit I: The Atom'
 parent_type: CourseSection
 parent_uid: 36cc671a-c04c-270e-9cac-7a210efd6846
 resourcetype: Document
-title: 'Principles of Chemical Science: Lecture Notes 2'
+title: 'Lecture 2: Atomic Structure'
 uid: e7edbbcf-5e52-214a-f28f-11743c6f5cc4
 video_files:
   archive_url: ''
