--- a/content/resources/mit5_111f14_lec5.md
+++ b/content/resources/mit5_111f14_lec5.md
@@ -17,7 +17,7 @@ parent_title: 'Unit I: The Atom'
 parent_type: CourseSection
 parent_uid: 36cc671a-c04c-270e-9cac-7a210efd6846
 resourcetype: Document
-title: 'Principles of Chemical Science: Lecture Notes 5'
+title: 'Lecture 5: Hydrogen Atom Energy Levels'
 uid: 6a9e6b5f-f06c-73aa-b0f7-a9389e10416b
 video_files:
   archive_url: ''
