--- a/content/resources/mit5_111f14_lec7.md
+++ b/content/resources/mit5_111f14_lec7.md
@@ -17,7 +17,7 @@ parent_title: 'Unit I: The Atom'
 parent_type: CourseSection
 parent_uid: 36cc671a-c04c-270e-9cac-7a210efd6846
 resourcetype: Document
-title: 'Principles of Chemical Science: Lecture Notes 7'
+title: 'Lecture 7: Multi-electron Atoms'
 uid: 35926f35-3f18-c1e7-2787-02f3eb1c9060
 video_files:
   archive_url: ''
