--- a/content/resources/mit5_111f14_lec8.md
+++ b/content/resources/mit5_111f14_lec8.md
@@ -17,7 +17,7 @@ parent_title: 'Lecture 8: The Periodic Table and Periodic Trends'
 parent_type: CourseSection
 parent_uid: 3ea46bd0-50d7-7305-ee1a-67bd41bfde89
 resourcetype: Document
-title: Lecture Notes 8
+title: 'Lecture 8: The Periodic Table and Periodic Trends'
 uid: 0e1c7724-b4f3-47c8-1afc-981e53002d3c
 video_files:
   archive_url: ''
